fixed images not appearing because of improper file place

--- a/recipes/chocolavacake.html
+++ b/recipes/chocolavacake.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Chocolate Lava Cake</h1>
-    <img src="img/lava-cake.jpg" height="300">
+    <img src="../img/lava-cake.jpg" height="300">
     <p>A simple gf chocolate lava cake that is real treat to anyone who enjoys it. Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore minus eius omnis maxime aut tempora numquam ducimus eaque. Totam sequi ipsum dignissimos vel officia reiciendis et nesciunt eveniet optio autem!</p>
     <ul>
         <li><strong>1/2 cup</strong> sugar</li>
