--- a/recipes/grilledcheese.html
+++ b/recipes/grilledcheese.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Grilled Cheese</h1>
-    <img src="img/grilled-cheese.jpg" height="300">
+    <img src="../img/grilled-cheese.jpg" height="300">
     <p>A simple grilled cheese sandwich. Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore minus eius omnis maxime aut tempora numquam ducimus eaque. Totam sequi ipsum dignissimos vel officia reiciendis et nesciunt eveniet optio autem!</p>
     <ul>
         <li>Bread</li>
