--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <p><a href="./recipes/chocolavacake.html">Chocloate Lava Cake</a></p>
+    <p><a href="./recipes/chocolavacake.html">Chocolate Lava Cake</a></p>
     <p><a href="./recipes/grilledcheese.html">Grilled Cheese</a></p>
 </body>
 </html>
